--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,19 +1,20 @@
 @use "sass:map";
 
 // Import variables
-@use "../abstracts/config" as *;
-@use "../utilities/media-queries" as media;
+@use "../config/typography" as config-typo;
+@use "../config/feature-flags" as config-flags;
+@use "../tools/accessibility" as tool-accessibility;
 
 :root {
-    --font-family-base: #{$font-family};
+    --font-family-base: #{config-typo.$font-family};
 }
 
-// Base typography styles
+// Base config-typo styles
 html {
-    font-size: $base-size;
+    font-size: config-typo.$base-size;
 }
 
-body#{$parent-selector} {
+body#{config-flags.$parent-selector} {
     font-family: var(--font-family-base);
     font-weight: 400;
     line-height: 1.5;
@@ -21,54 +22,54 @@ body#{$parent-selector} {
 }
 
 // Headings
-#{$parent-selector} h1,
-#{$parent-selector} h2,
-#{$parent-selector} h3,
-#{$parent-selector} h4,
-#{$parent-selector} h5,
-#{$parent-selector} h6 {
+#{config-flags.$parent-selector} h1,
+#{config-flags.$parent-selector} h2,
+#{config-flags.$parent-selector} h3,
+#{config-flags.$parent-selector} h4,
+#{config-flags.$parent-selector} h5,
+#{config-flags.$parent-selector} h6 {
     margin-bottom: 0.5em;
     font-family: var(--font-family-base);
     font-weight: 700;
     line-height: 1.2;
 }
 
-#{$parent-selector} h1 {
-    font-size: map.get($font-sizes, "4xl");
+#{config-flags.$parent-selector} h1 {
+    font-size: map.get(config-typo.$font-sizes, "4xl");
 }
 
-#{$parent-selector} h2 {
-    font-size: map.get($font-sizes, "3xl");
+#{config-flags.$parent-selector} h2 {
+    font-size: map.get(config-typo.$font-sizes, "3xl");
 }
 
-#{$parent-selector} h3 {
-    font-size: map.get($font-sizes, "2xl");
+#{config-flags.$parent-selector} h3 {
+    font-size: map.get(config-typo.$font-sizes, "2xl");
 }
 
-#{$parent-selector} h4 {
-    font-size: map.get($font-sizes, "xl");
+#{config-flags.$parent-selector} h4 {
+    font-size: map.get(config-typo.$font-sizes, "xl");
 }
 
-#{$parent-selector} h5 {
-    font-size: map.get($font-sizes, "lg");
+#{config-flags.$parent-selector} h5 {
+    font-size: map.get(config-typo.$font-sizes, "lg");
 }
 
-#{$parent-selector} h6 {
-    font-size: map.get($font-sizes, "base");
+#{config-flags.$parent-selector} h6 {
+    font-size: map.get(config-typo.$font-sizes, "base");
 }
 
 // Paragraphs
-#{$parent-selector} p {
+#{config-flags.$parent-selector} p {
     margin-bottom: 1rem;
 }
 
 // Small text
-#{$parent-selector} small {
-    font-size: map.get($font-sizes, "sm");
+#{config-flags.$parent-selector} small {
+    font-size: map.get(config-typo.$font-sizes, "sm");
 }
 
 // Buttons
-#{$parent-selector} button {
+#{config-flags.$parent-selector} button {
     padding: 0.5rem 1rem;
     border: 0;
     border-radius: 0.25rem;
@@ -100,12 +101,12 @@ body#{$parent-selector} {
 }
 
 // Inputs
-#{$parent-selector} input[type="text"],
-#{$parent-selector} input[type="email"],
-#{$parent-selector} input[type="password"],
-#{$parent-selector} input[type="number"],
-#{$parent-selector} input[type="search"],
-#{$parent-selector} textarea {
+#{config-flags.$parent-selector} input[type="text"],
+#{config-flags.$parent-selector} input[type="email"],
+#{config-flags.$parent-selector} input[type="password"],
+#{config-flags.$parent-selector} input[type="number"],
+#{config-flags.$parent-selector} input[type="search"],
+#{config-flags.$parent-selector} textarea {
     padding: 0.5rem;
     border: var(--border-size, 1px) var(--border-style, solid) var(--border-base, var(--secondary));
     border-radius: 0.25rem;
@@ -120,13 +121,13 @@ body#{$parent-selector} {
 }
 
 // Checkboxes and Radio Buttons
-#{$parent-selector} input[type="checkbox"],
-#{$parent-selector} input[type="radio"] {
+#{config-flags.$parent-selector} input[type="checkbox"],
+#{config-flags.$parent-selector} input[type="radio"] {
     margin-right: 0.5rem; // Space between input and label
 }
 
 // Selects
-#{$parent-selector} select {
+#{config-flags.$parent-selector} select {
     padding: 0.5rem;
     border: var(--border-size, 1px) var(--border-style, solid) var(--border-base, var(--secondary));
     border-radius: 0.25rem;
@@ -141,7 +142,7 @@ body#{$parent-selector} {
 }
 
 // Blockquotes
-#{$parent-selector} blockquote {
+#{config-flags.$parent-selector} blockquote {
     margin: 1rem 0;
     padding: 0.5rem 1rem;
     border-left: var(--border-size, 4px) var(--border-style, solid) var(--border-base, var(--secondary));
@@ -149,30 +150,30 @@ body#{$parent-selector} {
 }
 
 // Horizontal Rule
-#{$parent-selector} hr {
+#{config-flags.$parent-selector} hr {
     border: none;
     border-top: var(--border-size, 1px) var(--border-style, solid) var(--border-base, var(--secondary));
     margin: 1rem 0;
 }
 
 // Images
-#{$parent-selector} img {
+#{config-flags.$parent-selector} img {
     max-width: 100%; // Responsive images
     height: auto;
 }
 
 // Figures and Captions
-#{$parent-selector} figure {
+#{config-flags.$parent-selector} figure {
     margin: 1rem 0;
 }
 
-#{$parent-selector} figcaption {
+#{config-flags.$parent-selector} figcaption {
     font-size: 0.875rem; // Smaller font for captions
     color: var(--text-muted, #666); // Optional secondary text color
 }
 
 // Links
-#{$parent-selector} a {
+#{config-flags.$parent-selector} a {
     transition: color 0.2s ease-in-out;
 
     &:not([class*="text-"]) {
@@ -186,12 +187,12 @@ body#{$parent-selector} {
 }
 
 // Labels
-#{$parent-selector} label[for] {
+#{config-flags.$parent-selector} label[for] {
     cursor: pointer;
 }
 
 // todo: add to doc
-#{$parent-selector} .sr-only {
+#{config-flags.$parent-selector} .sr-only {
     position: absolute !important;
     width: 1px !important;
     height: 1px !important;
@@ -203,7 +204,7 @@ body#{$parent-selector} {
     border: 0 !important;
 }
 
-#{$parent-selector} code {
+#{config-flags.$parent-selector} code {
     font-family: "Courier New", Courier, monospace;
     background-color: #f8f8f8;
     color: #d63384;
@@ -211,7 +212,7 @@ body#{$parent-selector} {
     border-radius: 3px;
     white-space: nowrap;
 
-    @include media.dark-mode {
+    @include tool-accessibility.dark-mode {
         background-color: #333;
         color: #f8f8f2;
     }
