--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,21 @@
-@forward "abstracts/config";
-@forward "abstracts/functions";
+@forward "config/borders";
+@forward "config/breakpoints";
+@forward "config/colors";
+@forward "config/feature-flags";
+@forward "config/layouts";
+@forward "config/shadows";
+@forward "config/spacing";
+@forward "config/theme-validation";
+@forward "config/typography";
+
+@forward "functions/breakpoints";
+@forward "functions/colors";
+@forward "functions/css-vars";
+@forward "functions/feature-flags";
+@forward "functions/math";
+@forward "functions/strings";
+@forward "functions/types";
+@forward "functions/units";
 
 @forward "base/reset";
 @forward "base/base";
@@ -8,24 +24,29 @@
 @forward "layouts/flex";
 @forward "layouts/grid";
 
+@forward "tools/container-queries";
+@forward "tools/media-queries";
+@forward "tools/accessibility";
+@forward "tools/feature-support";
+@forward "tools/modern-layout";
+
+@forward "components/tooltips";
+
 @forward "utilities/opacity";
 @forward "utilities/helpers";
 @forward "utilities/alignment";
 @forward "utilities/backdrop-filters";
 @forward "utilities/borders";
 @forward "utilities/colors";
-@forward "utilities/container-queries";
 @forward "utilities/cursor";
 @forward "utilities/display";
 @forward "utilities/shadows";
 @forward "utilities/sizing";
-@forward "utilities/tooltips";
 @forward "utilities/transforms";
 @forward "utilities/transitions";
 @forward "utilities/typography";
 @forward "utilities/z-index";
 @forward "utilities/spacing";
-@forward "utilities/media-queries";
 @forward "utilities/animations";
 @forward "utilities/position";
 
