--- a/src/styles/utilities/_backdrop-filters.scss
+++ b/src/styles/utilities/_backdrop-filters.scss
@@ -1,7 +1,8 @@
 @use "sass:map";
 @use "sass:meta";
-@use "../abstracts/config" as VAR;
-@use "../abstracts/functions" as FN;
+@use "../config/feature-flags" as config-flags;
+@use "../config/breakpoints" as config-breakpoint;
+@use "../functions/feature-flags" as fn-flags;
 
 // Backdrop Filter Utilities
 // Provides utility classes and mixins for backdrop-filter effects.
@@ -218,95 +219,95 @@ $backdrop-filter-presets: (
     $suffix: if($breakpoint, "\\@#{$breakpoint}", "");
 
     // Base layer class
-    #{VAR.$parent-selector} .backdrop-layer#{$suffix} {
+    #{config-flags.$parent-selector} .backdrop-layer#{$suffix} {
         @include backdrop-layer;
     }
 
     // Basic backdrop utilities
-    #{VAR.$parent-selector} .backdrop-none#{$suffix} {
+    #{config-flags.$parent-selector} .backdrop-none#{$suffix} {
         @include backdrop-none;
     }
 
     // Blur utilities
     @each $key, $value in $backdrop-blur-values {
-        #{VAR.$parent-selector} .backdrop-blur-#{$key}#{$suffix} {
+        #{config-flags.$parent-selector} .backdrop-blur-#{$key}#{$suffix} {
             @include backdrop-blur($key);
         }
     }
 
     // Brightness utilities
     @each $key, $value in $backdrop-brightness-values {
-        #{VAR.$parent-selector} .backdrop-brightness-#{$key}#{$suffix} {
+        #{config-flags.$parent-selector} .backdrop-brightness-#{$key}#{$suffix} {
             @include backdrop-brightness($key);
         }
     }
 
     // Contrast utilities
     @each $key, $value in $backdrop-contrast-values {
-        #{VAR.$parent-selector} .backdrop-contrast-#{$key}#{$suffix} {
+        #{config-flags.$parent-selector} .backdrop-contrast-#{$key}#{$suffix} {
             @include backdrop-contrast($key);
         }
     }
 
     // Grayscale utilities
     @each $key, $value in $backdrop-grayscale-values {
-        #{VAR.$parent-selector} .backdrop-grayscale-#{$key}#{$suffix} {
+        #{config-flags.$parent-selector} .backdrop-grayscale-#{$key}#{$suffix} {
             @include backdrop-grayscale($key);
         }
     }
 
     // Saturate utilities
     @each $key, $value in $backdrop-saturate-values {
-        #{VAR.$parent-selector} .backdrop-saturate-#{$key}#{$suffix} {
+        #{config-flags.$parent-selector} .backdrop-saturate-#{$key}#{$suffix} {
             @include backdrop-saturate($key);
         }
     }
 
     // Sepia utilities
     @each $key, $value in $backdrop-sepia-values {
-        #{VAR.$parent-selector} .backdrop-sepia-#{$key}#{$suffix} {
+        #{config-flags.$parent-selector} .backdrop-sepia-#{$key}#{$suffix} {
             @include backdrop-sepia($key);
         }
     }
 
     // Hue-rotate utilities
     @each $key, $value in $backdrop-hue-rotate-values {
-        #{VAR.$parent-selector} .backdrop-hue-#{$key}#{$suffix} {
+        #{config-flags.$parent-selector} .backdrop-hue-#{$key}#{$suffix} {
             @include backdrop-hue-rotate($key);
         }
     }
 
     // Invert utilities
     @each $key, $value in $backdrop-invert-values {
-        #{VAR.$parent-selector} .backdrop-invert-#{$key}#{$suffix} {
+        #{config-flags.$parent-selector} .backdrop-invert-#{$key}#{$suffix} {
             @include backdrop-invert($key);
         }
     }
 
     // Preset utilities (these override the CSS variables approach)
-    #{VAR.$parent-selector} .backdrop-frosted#{$suffix} {
+    #{config-flags.$parent-selector} .backdrop-frosted#{$suffix} {
         @include backdrop-frosted;
     }
-    #{VAR.$parent-selector} .backdrop-glass#{$suffix} {
+    #{config-flags.$parent-selector} .backdrop-glass#{$suffix} {
         @include backdrop-glass;
     }
-    #{VAR.$parent-selector} .backdrop-dark-glass#{$suffix} {
+    #{config-flags.$parent-selector} .backdrop-dark-glass#{$suffix} {
         @include backdrop-dark-glass;
     }
-    #{VAR.$parent-selector} .backdrop-crystal#{$suffix} {
+    #{config-flags.$parent-selector} .backdrop-crystal#{$suffix} {
         @include backdrop-crystal;
     }
-    #{VAR.$parent-selector} .backdrop-matte#{$suffix} {
+    #{config-flags.$parent-selector} .backdrop-matte#{$suffix} {
         @include backdrop-matte;
     }
 }
 
-@if FN.feature-enabled("backdrops") {
+@if fn-flags.feature-enabled("backdrops") {
     // Generate base utilities
     @include generate-backdrop-filter-utilities;
 
     // Generate responsive variants
-    @each $breakpoint, $width in VAR.$breakpoints {
+    @each $breakpoint, $width in config-breakpoint.$breakpoints {
         @media (min-width: #{$width}) {
             @include generate-backdrop-filter-utilities($breakpoint);
         }
