--- a/src/styles/utilities/_spacing.scss
+++ b/src/styles/utilities/_spacing.scss
@@ -1,8 +1,11 @@
 @use "sass:math";
 @use "sass:string";
 @use "sass:meta";
-@use "../abstracts/config" as VAR;
-@use "../abstracts/functions" as FN;
+@use "../config/feature-flags" as config-flags;
+@use "../config/breakpoints" as config-breakpoint;
+@use "../config/spacing" as config-spacing;
+@use "../functions/feature-flags" as fn-flags;
+@use "../functions/units" as fn-units;
 
 // @component Spacing
 // @description Controls element margins, padding, gaps, and spacing between children
@@ -67,49 +70,49 @@
 // @description Sets padding on all sides
 // @param {Number|String} $val - Padding value
 @mixin p($val) {
-    padding: FN.fix-units($val);
+    padding: fn-units.fix-units($val);
 }
 
 // @mixin px
 // @description Sets horizontal padding (left and right)
 // @param {Number|String} $val - Padding value
 @mixin px($val) {
-    padding-inline: FN.fix-units($val);
+    padding-inline: fn-units.fix-units($val);
 }
 
 // @mixin py
 // @description Sets vertical padding (top and bottom)
 // @param {Number|String} $val - Padding value
 @mixin py($val) {
-    padding-block: FN.fix-units($val);
+    padding-block: fn-units.fix-units($val);
 }
 
 // @mixin pt
 // @description Sets padding-top
 // @param {Number|String} $val - Padding value
 @mixin pt($val) {
-    padding-top: FN.fix-units($val);
+    padding-top: fn-units.fix-units($val);
 }
 
 // @mixin pr
 // @description Sets padding-right
 // @param {Number|String} $val - Padding value
 @mixin pr($val) {
-    padding-right: FN.fix-units($val);
+    padding-right: fn-units.fix-units($val);
 }
 
 // @mixin pb
 // @description Sets padding-bottom
 // @param {Number|String} $val - Padding value
 @mixin pb($val) {
-    padding-bottom: FN.fix-units($val);
+    padding-bottom: fn-units.fix-units($val);
 }
 
 // @mixin pl
 // @description Sets padding-left
 // @param {Number|String} $val - Padding value
 @mixin pl($val) {
-    padding-left: FN.fix-units($val);
+    padding-left: fn-units.fix-units($val);
 }
 
 // -----------------------------------------------
@@ -120,51 +123,51 @@
 // @description Sets margin on all sides
 // @param {Number|String} $val - Margin value
 @mixin m($val) {
-    margin: FN.fix-units($val);
+    margin: fn-units.fix-units($val);
 }
 
 // @mixin mx
 // @description Sets horizontal margin (left and right)
 // @param {Number|String} $val - Margin value
 @mixin mx($val) {
-    margin-inline: FN.fix-units($val);
+    margin-inline: fn-units.fix-units($val);
 }
 
 // @mixin my
 // @description Sets vertical margin (top and bottom)
 // @param {Number|String} $val - Margin value
 @mixin my($val) {
-    $val: FN.fix-units($val);
+    $val: fn-units.fix-units($val);
 
-    margin-block: FN.fix-units($val);
+    margin-block: fn-units.fix-units($val);
 }
 
 // @mixin mt
 // @description Sets margin-top
 // @param {Number|String} $val - Margin value
 @mixin mt($val) {
-    margin-top: FN.fix-units($val, VAR.$default-unit);
+    margin-top: fn-units.fix-units($val, config-flags.$default-unit);
 }
 
 // @mixin mr
 // @description Sets margin-right
 // @param {Number|String} $val - Margin value
 @mixin mr($val) {
-    margin-right: FN.fix-units($val);
+    margin-right: fn-units.fix-units($val);
 }
 
 // @mixin mb
 // @description Sets margin-bottom
 // @param {Number|String} $val - Margin value
 @mixin mb($val) {
-    margin-bottom: FN.fix-units($val);
+    margin-bottom: fn-units.fix-units($val);
 }
 
 // @mixin ml
 // @description Sets margin-left
 // @param {Number|String} $val - Margin value
 @mixin ml($val) {
-    margin-left: FN.fix-units($val);
+    margin-left: fn-units.fix-units($val);
 }
 
 // @mixin ml-auto
@@ -194,16 +197,16 @@
 // @description Sets all inset properties (top, right, bottom, left)
 // @param {Number|String} $val - Inset value
 @mixin inset($val) {
-    $val: FN.fix-units($val);
+    $val: fn-units.fix-units($val);
 
-    inset: FN.fix-units($val);
+    inset: fn-units.fix-units($val);
 }
 
 // @mixin inset-x
 // @description Sets horizontal inset properties (left and right)
 // @param {Number|String} $val - Inset value
 @mixin inset-x($val) {
-    $val: FN.fix-units($val);
+    $val: fn-units.fix-units($val);
 
     left: $val;
     right: $val;
@@ -213,7 +216,7 @@
 // @description Sets vertical inset properties (top and bottom)
 // @param {Number|String} $val - Inset value
 @mixin inset-y($val) {
-    $val: FN.fix-units($val);
+    $val: fn-units.fix-units($val);
 
     top: $val;
     bottom: $val;
@@ -248,7 +251,7 @@
 // @param {Number|String} $i - Space amount
 @mixin space-y($i) {
     & > * + * {
-        margin-top: FN.fix-units($i);
+        margin-top: fn-units.fix-units($i);
     }
 }
 
@@ -257,7 +260,7 @@
 // @param {Number|String} $i - Space amount
 @mixin space-x($i) {
     & > * + * {
-        margin-left: FN.fix-units($i);
+        margin-left: fn-units.fix-units($i);
     }
 }
 
@@ -269,7 +272,7 @@
 // @description Sets gap between grid/flex children
 // @param {Number|String} $val - Gap value
 @mixin gap($val) {
-    $val: FN.fix-units($val);
+    $val: fn-units.fix-units($val);
 
     gap: $val;
 
@@ -280,7 +283,7 @@
 // @description Sets horizontal gap between grid/flex children
 // @param {Number|String} $val - Gap value
 @mixin gap-x($val) {
-    $val: FN.fix-units($val);
+    $val: fn-units.fix-units($val);
 
     column-gap: $val;
 
@@ -291,27 +294,27 @@
 // @description Sets vertical gap between grid/flex children
 // @param {Number|String} $val - Gap value
 @mixin gap-y($val) {
-    $val: FN.fix-units($val);
+    $val: fn-units.fix-units($val);
 
     row-gap: $val;
 
     --flex-gap: #{$val};
 }
 
-@if FN.feature-enabled("spacing") {
+@if fn-flags.feature-enabled("spacing") {
     // -----------------------------------------------
     // AUTO MARGIN UTILITY CLASSES
     // -----------------------------------------------
 
-    #{VAR.$parent-selector} .mx-auto {
+    #{config-flags.$parent-selector} .mx-auto {
         @include mx-auto;
     }
 
-    #{VAR.$parent-selector} .ml-auto {
+    #{config-flags.$parent-selector} .ml-auto {
         @include ml-auto;
     }
 
-    #{VAR.$parent-selector} .mr-auto {
+    #{config-flags.$parent-selector} .mr-auto {
         @include mr-auto;
     }
 
@@ -319,20 +322,20 @@
     // GAP AUTO CLASS
     // -----------------------------------------------
 
-    #{VAR.$parent-selector} .gap-auto {
+    #{config-flags.$parent-selector} .gap-auto {
         gap: auto;
     }
 
     // Auto inset utility classes
-    #{VAR.$parent-selector} .inset-auto {
+    #{config-flags.$parent-selector} .inset-auto {
         @include inset-auto;
     }
 
-    #{VAR.$parent-selector} .inset-x-auto {
+    #{config-flags.$parent-selector} .inset-x-auto {
         @include inset-x-auto;
     }
 
-    #{VAR.$parent-selector} .inset-y-auto {
+    #{config-flags.$parent-selector} .inset-y-auto {
         @include inset-y-auto;
     }
 
@@ -340,79 +343,79 @@
     // SPACING CLASSES
     // -----------------------------------------------
 
-    @each $key, $value in VAR.$spacings {
+    @each $key, $value in config-spacing.$spacings {
         // Padding classes
-        #{VAR.$parent-selector} .p-#{$key} {
+        #{config-flags.$parent-selector} .p-#{$key} {
             @include p($value);
         }
-        #{VAR.$parent-selector} .px-#{$key} {
+        #{config-flags.$parent-selector} .px-#{$key} {
             @include px($value);
         }
-        #{VAR.$parent-selector} .py-#{$key} {
+        #{config-flags.$parent-selector} .py-#{$key} {
             @include py($value);
         }
-        #{VAR.$parent-selector} .pt-#{$key} {
+        #{config-flags.$parent-selector} .pt-#{$key} {
             @include pt($value);
         }
-        #{VAR.$parent-selector} .pr-#{$key} {
+        #{config-flags.$parent-selector} .pr-#{$key} {
             @include pr($value);
         }
-        #{VAR.$parent-selector} .pb-#{$key} {
+        #{config-flags.$parent-selector} .pb-#{$key} {
             @include pb($value);
         }
-        #{VAR.$parent-selector} .pl-#{$key} {
+        #{config-flags.$parent-selector} .pl-#{$key} {
             @include pl($value);
         }
 
         // Margin classes
-        #{VAR.$parent-selector} .m-#{$key} {
+        #{config-flags.$parent-selector} .m-#{$key} {
             @include m($value);
         }
-        #{VAR.$parent-selector} .mx-#{$key} {
+        #{config-flags.$parent-selector} .mx-#{$key} {
             @include mx($value);
         }
-        #{VAR.$parent-selector} .my-#{$key} {
+        #{config-flags.$parent-selector} .my-#{$key} {
             @include my($value);
         }
-        #{VAR.$parent-selector} .mt-#{$key} {
+        #{config-flags.$parent-selector} .mt-#{$key} {
             @include mt($value);
         }
-        #{VAR.$parent-selector} .mr-#{$key} {
+        #{config-flags.$parent-selector} .mr-#{$key} {
             @include mr($value);
         }
-        #{VAR.$parent-selector} .mb-#{$key} {
+        #{config-flags.$parent-selector} .mb-#{$key} {
             @include mb($value);
         }
-        #{VAR.$parent-selector} .ml-#{$key} {
+        #{config-flags.$parent-selector} .ml-#{$key} {
             @include ml($value);
         }
 
         // Gap classes
-        #{VAR.$parent-selector} .gap-#{$key} {
+        #{config-flags.$parent-selector} .gap-#{$key} {
             @include gap($value);
         }
-        #{VAR.$parent-selector} .gap-x-#{$key} {
+        #{config-flags.$parent-selector} .gap-x-#{$key} {
             @include gap-x($value);
         }
-        #{VAR.$parent-selector} .gap-y-#{$key} {
+        #{config-flags.$parent-selector} .gap-y-#{$key} {
             @include gap-y($value);
         }
 
         // Space classes
-        #{VAR.$parent-selector} .space-x-#{$key} {
+        #{config-flags.$parent-selector} .space-x-#{$key} {
             @include space-x($value);
         }
-        #{VAR.$parent-selector} .space-y-#{$key} {
+        #{config-flags.$parent-selector} .space-y-#{$key} {
             @include space-y($value);
         }
 
-        #{VAR.$parent-selector} .inset-#{$key} {
+        #{config-flags.$parent-selector} .inset-#{$key} {
             @include inset($value);
         }
-        #{VAR.$parent-selector} .inset-x-#{$key} {
+        #{config-flags.$parent-selector} .inset-x-#{$key} {
             @include inset-x($value);
         }
-        #{VAR.$parent-selector} .inset-y-#{$key} {
+        #{config-flags.$parent-selector} .inset-y-#{$key} {
             @include inset-y($value);
         }
     }
@@ -421,99 +424,99 @@
     // RESPONSIVE SPACING CLASSES
     // -----------------------------------------------
 
-    @each $breakpoint, $width in VAR.$breakpoints {
+    @each $breakpoint, $width in config-breakpoint.$breakpoints {
         @media (min-width: #{$width}) {
-            #{VAR.$parent-selector} .mx-auto\@#{$breakpoint} {
+            #{config-flags.$parent-selector} .mx-auto\@#{$breakpoint} {
                 @include mx-auto;
             }
-            #{VAR.$parent-selector} .ml-auto\@#{$breakpoint} {
+            #{config-flags.$parent-selector} .ml-auto\@#{$breakpoint} {
                 @include ml-auto;
             }
-            #{VAR.$parent-selector} .mr-auto\@#{$breakpoint} {
+            #{config-flags.$parent-selector} .mr-auto\@#{$breakpoint} {
                 @include mr-auto;
             }
-            #{VAR.$parent-selector} .inset-auto\@#{$breakpoint} {
+            #{config-flags.$parent-selector} .inset-auto\@#{$breakpoint} {
                 @include inset-auto;
             }
-            #{VAR.$parent-selector} .inset-x-auto\@#{$breakpoint} {
+            #{config-flags.$parent-selector} .inset-x-auto\@#{$breakpoint} {
                 @include inset-x-auto;
             }
-            #{VAR.$parent-selector} .inset-y-auto\@#{$breakpoint} {
+            #{config-flags.$parent-selector} .inset-y-auto\@#{$breakpoint} {
                 @include inset-y-auto;
             }
 
             // Generate utilities from spacing map
-            @each $key, $value in VAR.$spacings {
+            @each $key, $value in config-spacing.$spacings {
                 // Padding classes
-                #{VAR.$parent-selector} .p-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .p-#{$key}\@#{$breakpoint} {
                     @include p($value);
                 }
-                #{VAR.$parent-selector} .px-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .px-#{$key}\@#{$breakpoint} {
                     @include px($value);
                 }
-                #{VAR.$parent-selector} .py-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .py-#{$key}\@#{$breakpoint} {
                     @include py($value);
                 }
-                #{VAR.$parent-selector} .pt-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .pt-#{$key}\@#{$breakpoint} {
                     @include pt($value);
                 }
-                #{VAR.$parent-selector} .pr-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .pr-#{$key}\@#{$breakpoint} {
                     @include pr($value);
                 }
-                #{VAR.$parent-selector} .pb-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .pb-#{$key}\@#{$breakpoint} {
                     @include pb($value);
                 }
-                #{VAR.$parent-selector} .pl-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .pl-#{$key}\@#{$breakpoint} {
                     @include pl($value);
                 }
 
                 // Margin classes
-                #{VAR.$parent-selector} .m-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .m-#{$key}\@#{$breakpoint} {
                     @include m($value);
                 }
-                #{VAR.$parent-selector} .mx-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .mx-#{$key}\@#{$breakpoint} {
                     @include mx($value);
                 }
-                #{VAR.$parent-selector} .my-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .my-#{$key}\@#{$breakpoint} {
                     @include my($value);
                 }
-                #{VAR.$parent-selector} .mt-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .mt-#{$key}\@#{$breakpoint} {
                     @include mt($value);
                 }
-                #{VAR.$parent-selector} .mr-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .mr-#{$key}\@#{$breakpoint} {
                     @include mr($value);
                 }
-                #{VAR.$parent-selector} .mb-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .mb-#{$key}\@#{$breakpoint} {
                     @include mb($value);
                 }
-                #{VAR.$parent-selector} .ml-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .ml-#{$key}\@#{$breakpoint} {
                     @include ml($value);
                 }
 
-                #{VAR.$parent-selector} .gap-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .gap-#{$key}\@#{$breakpoint} {
                     gap: $value;
                 }
-                #{VAR.$parent-selector} .gap-x-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .gap-x-#{$key}\@#{$breakpoint} {
                     column-gap: $value;
                 }
-                #{VAR.$parent-selector} .gap-y-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .gap-y-#{$key}\@#{$breakpoint} {
                     row-gap: $value;
                 }
 
                 // Space classes
-                #{VAR.$parent-selector} .space-x-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .space-x-#{$key}\@#{$breakpoint} {
                     @include space-x($value);
                 }
-                #{VAR.$parent-selector} .space-y-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .space-y-#{$key}\@#{$breakpoint} {
                     @include space-y($value);
                 }
-                #{VAR.$parent-selector} .inset-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .inset-#{$key}\@#{$breakpoint} {
                     @include inset($value);
                 }
-                #{VAR.$parent-selector} .inset-x-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .inset-x-#{$key}\@#{$breakpoint} {
                     @include inset-x($value);
                 }
-                #{VAR.$parent-selector} .inset-y-#{$key}\@#{$breakpoint} {
+                #{config-flags.$parent-selector} .inset-y-#{$key}\@#{$breakpoint} {
                     @include inset-y($value);
                 }
             }
